--- a/codesquare/src/main/resources/templates/planner/dashboard.html
+++ b/codesquare/src/main/resources/templates/planner/dashboard.html
@@ -83,7 +83,7 @@
             <div class="card card-stats shadow">
                 <div class="card-header">
                     <div class="card-icon card-icon-orange">
-						<div class="svgImg=">
+						<div class="svgImg">
 						    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 295.238 295.238" style="enable-background:new 0 0 295.238 295.238;" xml:space="preserve" width="56px" height="56px"><g><g>
 								<g>
 									<g>
