--- a/codesquare/src/main/resources/static/styles/planner/fullcalendar.css
+++ b/codesquare/src/main/resources/static/styles/planner/fullcalendar.css
@@ -405,10 +405,10 @@ template {
   display: none !important;
 }
 
-h1, h2, h3, h4, h5, h6,
+main h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-weight: 600;
+  font-weight: 200;
   line-height: 1.2;
   color: #1a1a1a;
 }
@@ -419,6 +419,7 @@ h1, .h1 {
 
 h2, .h2 {
   font-size: 1.75rem;
+  font-weight: 100px;
 }
 
 h3, .h3 {
@@ -632,8 +633,6 @@ pre code {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
 }
 
 .no-gutters {
@@ -1766,11 +1765,157 @@ pre code {
 }
 
 #calendar {
-   padding: 24px 31px;
-   max-width: 73%;
+padding: 24px 31px;
+   width: 81%;
    margin-top: 10px;
-   margin-left: 11%;
+   margin-left: 7%;
    margin-right: auto;
    background: #fff;
    box-shadow: 0 20px 50px 0 rgba(0, 0, 0, .14), 0 18px 35px -5px #d6d2cfa6;
+}
+#calendarModal .modal-header,
+#calendarModal .modal-footer {
+   border: none;
+	
+}
+#calendarModal {
+    font-family: inherit;
+}
+
+#modalBody {
+    width: 100%;
+	min-height: 77px;
+    padding: 0 40px 20px;
+    display: grid;
+}
+
+#modalBody .row {
+    margin : 0;
+}
+
+#modalBody .content {
+    padding-left: 20px;
+	font-size: 16px;
+	margin: auto;
+	color : #4e4e4e;
+}
+
+#modalBody .content span {
+	margin-left: 5px;
+}
+
+#modalBody img {
+	width: 90%;
+    margin: auto;
+    display: flex;
+}
+#modalBody .col-md-5 {
+	margin : auto;
+}
+
+#modalBody .groupId {
+    font-size: 22px;
+    margin: 5px 0 10px;
+  	color : #4e4e4e;
+}
+
+#modalBody .attend {
+    margin: 35px auto 30px;
+    font-size: 17px;
+}
+
+#modalBody .attend .yes {
+  	color : #3D870A;
+    font-size: 19px;
+}
+
+#modalBody .attend .no {
+  	color : #D0350A;
+	font-size: 19px;
+}
+
+#modalBody #attend-check {
+    margin: 0 auto 20px;
+}
+
+.btn-deepPurple:hover {
+    color: #f3f3f3;
+    background-color: #402058;
+    border-color: #402058;
+}
+.btn-deepPurple {
+    display: inline;
+    margin: auto;
+    padding: 8px 30px;
+    text-align: center;
+    color: #f3f3f3;
+    background-color: #4B0082;
+    border-color: #4B0082;
+    border-radius: 23px;
+    cursor: pointer;
+}
+
+
+.btn-red:hover {
+    color: #f3f3f3;
+    background-color: #81181e;
+    border-color: #81181e;
+}
+.btn-red {
+    display: inline;
+    margin: auto;
+    padding: 8px 30px;
+    text-align: center;
+    color: #f3f3f3;
+    background-color: #9C1E23;
+    border-color: #9C1E23;
+    cursor: pointer;
+}
+
+.btn-green:hover {
+    color: #f3f3f3;
+    background-color: #206632;
+    border-color: #1d6d31;
+}
+.btn-green {
+    display: inline;
+    margin: auto;
+    padding: 8px 30px;
+    text-align: center;
+    color: #f3f3f3;
+    background-color: #247538;
+    border-color: #247538;
+    cursor: pointer;
+}
+
+#attend-check .btn-red {
+	border-radius:0;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+}	
+
+#attend-check .btn-green {
+	border-radius:0;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+}	
+
+.fc-toolbar.fc-header-toolbar H2{
+	font-weight: 400px;
+}
+
+#calendarModal .title {
+    margin: 10px 0 5px;	
+}
+
+#calendarModal .goUrl {
+    text-align: center;
+    margin: 40px 0 30px;
+}
+a:hover {
+	color:white;
+}
+
+.btn-deepPurple a{
+	color:white;
 }
