--- a/codesquare/src/main/resources/templates/study/studyWantedWriteView.html
+++ b/codesquare/src/main/resources/templates/study/studyWantedWriteView.html
@@ -144,10 +144,10 @@
 										</th:block>
 									</dd>
 									<dt>시간:</dt>
-									<dd class="group-meetingTime" th:text="${#dates.format(group.startDate,'aaa HH시 mm분부터 ')}"></dd><dd></dd>
-									<dd class="group-startDate" th:text="${#dates.format(group.startDate)}>${#dates.format(#dates.createNow())}
-																		?|${#dates.format(group.startDate,'M월 dd일  (EE)')} 첫 스터디 시작  예정! |
-																		:|${#dates.format(group.startDate,'M월 dd일 (EE)')}부터 진행중인 그룹입니다|">
+									<dd class="group-meetingTime" th:text="${#temporals.format(group.startDate,'a HH시 mm분부터 ')}"></dd><dd></dd>
+									<dd class="group-startDate" th:text="${group.startDate}>${#temporals.createNow()}
+																		?|${#temporals.format(group.startDate,'M월 dd일  (EE)')} 첫 스터디 시작  예정! |
+																		:|${#temporals.format(group.startDate,'M월 dd일 (EE)')}부터 진행중인 그룹입니다|">
 									</dd>
 								</dl>
 							</div>
