--- a/codesquare/src/main/resources/templates/planner/calendar.html
+++ b/codesquare/src/main/resources/templates/planner/calendar.html
@@ -112,7 +112,7 @@
         },
         {
             events:   /*[[${SeminarEvent}]]*/,
-            color: '#8B7D9F',
+            color: '#B9B7C6',
             textColor: 'white'
         }
       ],
@@ -148,7 +148,7 @@
 		<div id='calendar'></div>
 		
 		
-		<div id="calendarModal" class="modal fade">
+		<div id="calendarModal" class="modal fade shadow">
 			<div class="modal-dialog modal-dialog-centered">
 			    <div class="modal-content">
 			        <div class="modal-header">
