창형이 꺼랑 합침

--- a/codesquare/src/main/resources/static/styles/indexCustom.css
+++ b/codesquare/src/main/resources/static/styles/indexCustom.css
@@ -16,3 +16,11 @@
   color:#A9BCF5;
 }
 
+.carousel-caption{
+    background: black;
+    opacity: .7;
+    width: 100%;
+    margin: auto;
+	left:0;
+	
+}
