--- a/codesquare/src/main/resources/templates/lecture/lectureList.html
+++ b/codesquare/src/main/resources/templates/lecture/lectureList.html
@@ -14,8 +14,8 @@
 				<form name="lectureIntro-serarchFrom" class="form-inline my-2 my-lg-0" style="border:none;">
 					<input type="text" style="display:none;"/>
 					<input class="form-control mr-sm-2" type="text" name="keyword"	placeholder="원하는 강의를 검색해 보세요!" 
-					style="font-size: 10px; width: 180px; height: 40px; margin-right: 0px; border-right: 1px dashed #D8D8D8">
-					<select name="searchKind" class="custom-select">
+					style="font-size: 10px; width: 180px; height: 40px; margin-right: 0px!important; border-right: 1px dashed #D8D8D8">
+					<select name="searchKind" class="custom-select" style="height: 40px;">
 						<option selected value="0">제목</option>
 						<option value="1">강사명</option>
 					</select>
