--- a/codesquare/src/main/resources/static/styles/planner/dashboard.css
+++ b/codesquare/src/main/resources/static/styles/planner/dashboard.css
@@ -61,10 +61,12 @@ main {
 
 .custom-tab .tab-content {
     height: 400px;
-    padding-top: 0;
+    padding-top: 10px;
     border: 1px solid rgba(0,0,0,.125);
     border-left: none;
     padding-bottom: 50px;
+    color:#4e4e4e;
+    
 }
 
 #bookmark-contentTab ,
@@ -581,3 +583,17 @@ main {
 #accorionGroupWork a {
 	color: #552796;
 }
+
+.schedule-list a div {
+	margin-bottom: 7px;	
+}
+
+#dash-first a {
+	color:#4e4e4e;
+	font-size: 20px;
+}
+
+#dash-first div {
+	margin-bottom: 10px;
+}
+
