--- a/codesquare/src/main/resources/static/styles/planner/dashboard.css
+++ b/codesquare/src/main/resources/static/styles/planner/dashboard.css
@@ -149,7 +149,8 @@ main {
 }
 
 .list__scheduleId {
-	width: 40%;
+	width: 30%;
+	color : #4B0082;
 }
 
 .list__boardKind {
@@ -158,18 +159,26 @@ main {
 }
 
 .list__meetingDate {
-	width: 13%;
+	width: 7%;
 	text-align: right;
 }
 
 .list__meetingDay {
-	width: 10%;
+	width: 5%;
 	text-align: center;
 }
-
+.list__meetingTime{
+	width: 20%;
+	text-align: right;
+	color: #C0C0C0;
+    font-size: 18px;
+    vertical-align: middle;
+	
+}
 .list__status {
 	width: 15%;
-	text-align: center;
+	text-align: right;
+	font-size : 15px;
 }
 
 
@@ -597,3 +606,28 @@ main {
 	margin-bottom: 10px;
 }
 
+.tag-custom {
+    border: 1px solid indianred;
+    color: #6190b3;
+    border-radius: 8px;
+    padding: 3px 8px;
+    margin-right: 5px;
+}
+.tag-custom i{
+    padding: 1px 11px;
+}
+.tag-custom.attend-true {
+  	color : #3D870A;
+ 	border: 1px solid #3D870A;
+}
+
+.tag-custom.attend-false {
+    border: 1px solid #C0C0C0;
+  	color : #C0C0C0;
+}
+
+.tag-custom.attend-none {
+    color: #4e4e4e;
+    border-color: #4e4e4e;
+    background-color: rgb(255, 213, 7);
+}
