--- a/codesquare/src/main/resources/templates/planner/dashboard.html
+++ b/codesquare/src/main/resources/templates/planner/dashboard.html
@@ -195,12 +195,16 @@
             $.each(objectSchedule, function (index, item) {
                 var isSeminarSchedule = 'seminarStartDate' in item;
                 var week = ['일', '월', '화', '수', '목', '금', '토'];
+                var date = new Date(item.meetingDate);
                 var el = [
-                    ['list__scheduleId', isSeminarSchedule ? '강사' : '그룹명', item.nickname || item.groupId]
-                    , ['list__boardKind', '분류', isSeminarSchedule ? '세미나' : '그룹']
-                    , ['list__meetingDate', '모임일', new Date(item.meetingDate).getDate() + '일']
-                    , ['list__meetingDay', '요일', week[new Date(item.meetingDate).getDay()]]
-                    , ['list__status '+(item.status=='none'?'fa fa-exclamation':(item.status==false?'fa fa-close':'fa fa-check')), '상태', '']
+                    ['list__scheduleId', isSeminarSchedule?'강사':'그룹명', item.nickname || item.groupId]
+                    , ['list__boardKind', '분류', isSeminarSchedule?'세미나':'그룹']
+                    , ['list__meetingDate', '모임일', date.getDate() + '일']
+                    , ['list__meetingDay', '요일', week[date.getDay()]]
+              		, ['list__meetingTime', '모임시간', date.getHours()+':'+(date.getMinutes()==0?'00':date.getMinutes())+"에 시작"]
+                    , ['list__status', '상태',
+                    	item.status=='none'?'<div class="tag-custom attend-none"><i class="fa fa-exclamation"></i><div>':
+                    	(item.status=='false'?'<div class="tag-custom attend-false">불참</div>':'<div class="tag-custom attend-true">참석</div>')]
                 ];
                 var html = '';
 
@@ -219,72 +223,7 @@
             viewSchedule(seminarSchedule, 'seminar');
         });
 
-        $(function () {
-            $(".map").click(function () {
-                $.ajax({
-                    type: 'post',
-                    url: '/test',
-                    /* dataType : 'html',  내가 서버에서 받을 데이터값의 타입을 정하는건가? */
-                    /* data : {"JSONallScedule":JSONallSchedule, "A" : "A"}, */
-                    data: JSONallSchedule,
-                    contentType: 'application/json; charset=UTF-8',
-/* 					traditional : true,
- */					success: function (data) {
-                        $(this).css('background-color', 'red');
-                        console.log("##### Ajax SUCCESS #######");
-                        console.log(this);
-                        console.log(data);
-                        console.log(event);
-                    },
-                    error: function (jqXHR, textStatus, errorThrown) {
-                        console.log("##### Ajax ERROR #######");
-                    }
-                });
-            });
-        });
-
     </script>
-<script>
-/* 
-$(window).on('load', function() {
-/* 	var container = document.getElementById('kkmap');
-	var options = {
-		center: new daum.maps.LatLng(33.450701, 126.570667),
-		level: 3
-	};
-	var map = new daum.maps.Map(container, options); */
-	
-	
-	var map = new daum.maps.Map(document.getElementById('kkmap'), { // 지도를 표시할 div
-        center : new daum.maps.LatLng(37.498206, 127.027610), // 지도의 중심좌표 
-        level : 10 // 지도의 확대 레벨 
-    });
-    
-    // 마커 클러스터러를 생성합니다 
-    var clusterer = new daum.maps.MarkerClusterer({
-        map: map, // 마커들을 클러스터로 관리하고 표시할 지도 객체 
-        averageCenter: true, // 클러스터에 포함된 마커들의 평균 위치를 클러스터 마커 위치로 설정 
-        minLevel: 10 // 클러스터 할 최소 지도 레벨 
-    });
- 
-    // 데이터를 가져오기 위해 jQuery를 사용합니다
-    // 데이터를 가져와 마커를 생성하고 클러스터러 객체에 넘겨줍니다
-    $.get("/download/web/data/test.json", function(data) {
-        // 데이터에서 좌표 값을 가지고 마커를 표시합니다
-        // 마커 클러스터러로 관리할 마커 객체는 생성할 때 지도 객체를 설정하지 않습니다
-        var markers = $(data.positions).map(function(i, position) {
-            return new daum.maps.Marker({
-                position : new daum.maps.LatLng(position.lat, position.lng)
-            });
-        });
-
-        // 클러스터러에 마커들을 추가합니다
-        clusterer.addMarkers(markers);
-    });
-});
- */
-
-</script>
 </th:block>
 </body>
 
