--- a/codesquare/src/main/resources/templates/fragments/header2.html
+++ b/codesquare/src/main/resources/templates/fragments/header2.html
@@ -23,8 +23,7 @@
 		<div id="zzz"><div class="noti-dropdown">
 			<a onclick="myFunction()" id="noti-btn" class="noti-btn"> <img
 				id="noticeImg" width="25" height="25" class="noti-btn"
-				src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKkXfRt5S4d9AsGllPR2vOmP6MWQff4ZnJYky3erxeoD6Yl3f-zw"
-				alt="Course noti">
+				th:src="@{/static/images/YellowBell.png}"/>
 			</a>
 
 			<div id="counts" class="noti-count"></div></div>
@@ -45,7 +44,7 @@
 			</div>
 			<!-- 푸쉬 팝업 -->
 			<div id="pushbar" align="right">
-				<img class="push_img" src='/static/images/logo123.png' />
+				<img class="push_img" src='/static/images/logo.png' />
 				<div id="text">
 					<strong> Notification
 						&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong> <span
