--- a/codesquare/src/main/resources/templates/layout/myPageLayout.html
+++ b/codesquare/src/main/resources/templates/layout/myPageLayout.html
@@ -31,7 +31,9 @@
 <link
 	href="https://fonts.googleapis.com/css?family=Do+Hyeon|Noto+Sans+KR"
 	rel="stylesheet">
-
+<link rel="stylesheet" type="text/css" href="/static/styles/notice.css" th:href="@{/static/styles/notice.css}">	
+<script th:src="@{/static/js/notice/notice.js}"></script>
+<script th:src="@{/static/js/notice/sockjs.js}"></script>
 <meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
 <!-- default header name is X-CSRF-TOKEN -->
 <meta id="_csrf_header" name="_csrf_header"
