--- a/codesquare/src/main/resources/templates/index3.html
+++ b/codesquare/src/main/resources/templates/index3.html
@@ -35,22 +35,18 @@
 							</div>
 						</div>
 
-		<div class="row quickButton">
+		<div class="row quickButton" style="margin-top: 5%;   margin-bottom: 10%;">
 			<div class="quickBox col-sm-1 col-md-2">
-				<img class="quick_btn_img" th:src="@{static/images/map_pin.png}"
-					alt="내주변" /><span>내주변</span>
+				<i class="fas fa-users fa-3x fa-lg"></i><span>스터디모집</span>
 			</div>
 			<div class="quickBox col-sm-1 col-md-2">
-				<img class="quick_btn_img" th:src="@{static/images/map_pin.png}"
-					alt="리눅스" /><span>리눅스</span>
+				<i class="fab fa-linux fa-3x fa-lg"></i><span>리눅스</span>
 			</div>
 			<div class="quickBox col-sm-1 col-md-2">
-				<img class="quick_btn_img" th:src="@{static/images/map_pin.png}"
-					alt="자격증" /><span>자격증</span>
+				<i class="fas fa-certificate fa-3x fa-lg"></i><span>자격증</span>
 			</div>
 			<div class="quickBox col-sm-1 col-md-2">
-				<img class="quick_btn_img" th:src="@{static/images/map_pin.png}"
-					alt="웹개발" /><span>웹개발</span>
+				<i class="fab fa-weebly fa-3x fa-lg"></i><span>웹개발</span>
 			</div>
 		</div>
 		<div class="recommand_item_container">
