--- a/codesquare/src/main/resources/static/styles/notice.css
+++ b/codesquare/src/main/resources/static/styles/notice.css
@@ -46,7 +46,7 @@
 	font-size: 12px;
 	position: absolute;
 	top: -2px;
-	right: -5px;
+	right: 0px;
 	width: 18px;
 	height: 18px;
 	color: white;
@@ -308,7 +308,9 @@ to {
 	bottom: 0;
 	opacity: 0;
 }
-
+#noti-btn{
+   padding: 0;
+}
 }
 .push_img {
 	display: block;
