--- a/codesquare/src/main/resources/static/styles/planner/dashboard.css
+++ b/codesquare/src/main/resources/static/styles/planner/dashboard.css
@@ -154,7 +154,7 @@ main {
 }
 
 .list__boardKind {
-	width: 18%;
+	width: 15%;
 	text-align: center;
 }
 
@@ -164,14 +164,15 @@ main {
 }
 
 .list__meetingDay {
-	width: 5%;
+	width: 15%;
 	text-align: center;
 }
+
 .list__meetingTime{
-	width: 20%;
-	text-align: right;
-	color: #C0C0C0;
-    font-size: 18px;
+    width: 17%;
+    text-align: right;
+    color: #a2a1a1;
+    font-size: 17px;
     vertical-align: middle;
 	
 }
