--- a/codesquare/src/main/resources/templates/layout/plannerLayout.html
+++ b/codesquare/src/main/resources/templates/layout/plannerLayout.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" type="text/css" th:href="@{/static/styles/main/mainHeader.css}">
   <link rel="stylesheet" type="text/css" th:href="@{/static/styles/main_styles.css}">
   <link rel="stylesheet" type="text/css" th:href="@{/static/styles/planner/planner.css}">
+  <link rel="stylesheet" type="text/css" href="/static/styles/notice.css" th:href="@{/static/styles/notice.css}">
   <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Noto+Sans+KR" rel="stylesheet">
 
   <meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
@@ -30,6 +31,9 @@
   <script th:src="@{/webjars/bootstrap-select/1.13.3/js/bootstrap-select.js}"></script>
   <script th:src="@{/webjars/waypoints/4.0.1/lib/jquery.waypoints.js}"></script>
   <script th:src="@{/static/js/securityAjax.js}"></script>
+  <script type="text/javascript"	src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
+<script type="text/javascript"	src="//cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  
   <th:block layout:fragment="scriptBefore"></th:block>
 </head>
 
@@ -123,7 +127,8 @@
   <script th:src="@{/static/plugins/parallax-js-master/parallax.min.js}"></script>
   <script th:src="@{/static/js/main/main.js}"></script>
   <script th:src="@{/static/js/member/myPage.js}"></script>
-
+	<script th:src="@{/static/js/notice/notice.js}"></script>
+	<script th:src="@{/static/js/notice/sockjs.js}"></script>
 
   <th:block layout:fragment="script"></th:block>
   <th:block layout:fragment="css"></th:block>
