planner layout에서 css를 main에서 planner css로 독립

--- a/codesquare/src/main/resources/static/styles/main_planner.css
+++ b/codesquare/src/main/resources/static/styles/main_planner.css
@@ -354,8 +354,9 @@ section
 /*********************************
 6. Search Box
 *********************************/
-
-
+.container{
+ min-width: 100%;
+}
 
 .search_box
 {
