--- a/codesquare/src/main/resources/templates/layout/plannerLayout.html
+++ b/codesquare/src/main/resources/templates/layout/plannerLayout.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/OwlCarousel2-2.2.1/animate.css}">
   <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/colorbox/colorbox.css}">
   <link rel="stylesheet" type="text/css" th:href="@{/static/styles/main/mainHeader.css}">
-  <link rel="stylesheet" type="text/css" th:href="@{/static/styles/main_styles.css}">
+<!--   <link rel="stylesheet" type="text/css" th:href="@{/static/styles/main_styles.css}"> -->
+	<link rel="stylesheet" type="text/css" th:href="@{/static/styles/main_planner.css}">
   <link rel="stylesheet" type="text/css" th:href="@{/static/styles/planner/planner.css}">
   <link rel="stylesheet" type="text/css" href="/static/styles/notice.css" th:href="@{/static/styles/notice.css}">
   <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Noto+Sans+KR" rel="stylesheet">
@@ -33,8 +34,7 @@
   <script th:src="@{/webjars/bootstrap-select/1.13.3/js/bootstrap-select.js}"></script>
   <script th:src="@{/webjars/waypoints/4.0.1/lib/jquery.waypoints.js}"></script>
   <script th:src="@{/static/js/securityAjax.js}"></script>
-  <script type="text/javascript"	src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
-<script type="text/javascript"	src="//cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+
   
   <th:block layout:fragment="scriptBefore"></th:block>
 </head>
@@ -108,7 +108,8 @@
   <!-- 페이지의 푸터부분 -->
 
   <footer th:replace="fragments/footer2 :: footerFragment2"></footer>
-
+  <script type="text/javascript" src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 
   <script th:src="@{/webjars/jquery-serialize-object/2.1.0/jquery.serialize-object.js}"></script>
   <script th:src="@{/static/plugins/greensock/TweenMax.min.js}"></script>
