댓글 카운트 추가+++

--- a/codesquare/src/main/resources/templates/board/freeView.html
+++ b/codesquare/src/main/resources/templates/board/freeView.html
@@ -35,7 +35,7 @@ text-decoration: none;
 		<h1 align="center"><a th:href="@{'/getfree/'+${boardKindId}}" style="color: black;"><span th:text="${bn.boardName}"></span></a></h1>
 		
 </div>			
-<span th:text=${list.title} style="font-weight: bold; font-size: 27px;"></span>
+<span th:text=${list.title} style="font-weight: bold; font-size: 27px;"></span><span th:utext="${co}"></span>
 <a style="float: right;"><span th:text="${list.hit}" style="float: right;"></span>조회수 &nbsp;</a>
 <span th:text="${list.writeDateBoard}"></span>
 <div style="margin-top: 25px; border-bottom: 1px solid #BAB9BA;"></div>
