--- a/codesquare/src/main/resources/templates/board/freeBoard.html
+++ b/codesquare/src/main/resources/templates/board/freeBoard.html
@@ -83,17 +83,17 @@ text-decoration: none;
 	<div class="container" align="right">
 		<table class="table table-hover row-clickable">
 			<tr th:each="Board:${list}">
-
-	             <td><a th:href="@{'/freeView/'+${boardKindId}+'?id=' + ${Board.id}}"><span th:text="${Board.title}" style="color: black; font-weight: bold; padding-right: 150px;"></span></a></td>
+	             <td><a th:href="@{'/freeView/'+${boardKindId}+'?id=' + ${Board.id}}"><span th:text="|${Board.title} &nbsp; [${Board.commentCount}]|" style="color: black; font-weight: bold; padding-right: 150px;"></span></a></td>
 	             <td th:text="${Board.nickName}" style="padding-left: 100px;"></td>
 	             <td style="padding-right: 1px; width: 30px;"><i class="far fa-eye"></i></td>
-	             <td style="padding-left: 1px;" th:text="${Board.hit}" ></td>
+	             <td style="padding-left: 1px;" th:text="${Board.hit}"></td>
 	             <td style="padding-right: 1px; width: 30px;"><i class="fas fa-heart"></i></td>
 	             <td th:text="${Board.likeCount}" style="padding-right: 7px; padding-left: 1px;"></td>
 	             <td th:text="${Board.writeDateBoard}" style="padding-right: 1px; padding-left: 1px;"></td>
 	        </tr>
 		</table>
 	</div>
+	
 	
 		<div align="right">
 			<span sec:authorize="isAuthenticated()">
