--- a/codesquare/src/main/resources/templates/layout/myPageLayout.html
+++ b/codesquare/src/main/resources/templates/layout/myPageLayout.html
@@ -25,15 +25,12 @@
 <link rel="stylesheet" type="text/css"
 	th:href="@{/static/styles/main/mainHeader.css}">
 <link rel="stylesheet" type="text/css"
-	th:href="@{/static/styles/main_styles.css}">
-<link rel="stylesheet" type="text/css"
 	th:href="@{/static/styles/member/myPage.css}">
 <link
 	href="https://fonts.googleapis.com/css?family=Do+Hyeon|Noto+Sans+KR"
 	rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/static/styles/notice.css" th:href="@{/static/styles/notice.css}">	
-<script th:src="@{/static/js/notice/notice.js}"></script>
-<script th:src="@{/static/js/notice/sockjs.js}"></script>
+<link rel="stylesheet" type="text/css" href="/static/styles/notice.css"
+	th:href="@{/static/styles/notice.css}">
 <meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
 <!-- default header name is X-CSRF-TOKEN -->
 <meta id="_csrf_header" name="_csrf_header"
@@ -41,122 +38,135 @@
 
 </head>
 <body>
- <div id="wapper">
-	<!-- 페이지의 헤더부분 -->
-	<header th:replace="fragments/header2 :: headerFragment2"></header>
+	<div id="wapper">
+		<!-- 페이지의 헤더부분 -->
+		<header th:replace="fragments/header2 :: headerFragment2"></header>
 
 
-	<!-- 페이지의 content -->
+		<!-- 페이지의 content -->
 
 
-	<div class="container">
-		<div class="row">
-			<nav class="col-md-3 d-none d-md-block">
-				<div class="sidebar">
-					<br /> <br /> <br />
-					<ul class="nav flex-column">
-						<li class="nav-item">
-							<div class="profile px-2 text-center">
-						
-								<img th:src="@{${session.profileImagePath}}" class="profileImg "
-									style="width: 100px; height: 100px" /> <br /> <br /><span id="myNickName"
-									th:text="${session.nickName}"> </span><br />(<input type="hidden" name="userId" id="userId" th:text="${session.userId}">) 님<br /> 안녕하세요!
-							</div>
-						</li>
+		<div class="container">
+			<div class="row">
+				<nav class="col-md-3 d-none d-md-block">
+					<div class="sidebar">
+						<br /> <br /> <br />
+						<ul class="nav flex-column">
+							<li class="nav-item">
+								<div class="profile px-2 text-center">
 
-					</ul>
+									<img th:src="@{${session.profileImagePath}}"
+										class="profileImg " style="width: 100px; height: 100px" /> <br />
+									<br />
+									<span id="myNickName" th:text="${session.nickName}"> </span><br />(<input
+										type="hidden" name="userId" id="userId"
+										th:text="${session.userId}">) 님<br /> 안녕하세요!
+								</div>
+							</li>
 
-					<h6
-						class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-					</h6>
-					<ul class="nav flex-column mb-2">
+						</ul>
 
-						<li class="nav-item"><a id="myMessageInbox" class="nav-link"><i
-								class="far fa-envelope"></i> 내쪽지함 [<span
-								th:text="${count.messageCount}"></span>] </a></li>
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/member/myReservedList}"> <i
-								class="fas fa-file-invoice-dollar"></i> 나의 예약 및 결제 내역 [<span
-								th:text="${count.reservationCount}"></span>]
-						</a></li>
-						<li class="nav-item" sec:authorize="hasRole('ROLE_2')"><a
-							class="nav-link" th:href="@{/member/modifyInstructorInfo}"> <i
-								class="fas fa-chalkboard-teacher"></i> 강사정보수정하기
-						</a></li>
-						<li class="nav-item"
-							sec:authorize="hasAnyRole('ROLE_1','ROLE_4','ROLE_5') ">
-							<a class="nav-link" th:href="@{/member/toInstructor}"><i
-								class="fas fa-user-tie"></i> 강사전환신청하기</a>
-						</li>
-						<li class="nav-item social" style="display: none;"><a
-							class="nav-link" th:href="@{/member/changePw}"><i class="fas fa-key"></i>
-								비밀번호바꾸기 </a></li>
+						<h6
+							class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+						</h6>
+						<ul class="nav flex-column mb-2">
 
-					</ul>
+							<li class="nav-item"><a id="myMessageInbox" class="nav-link"><i
+									class="far fa-envelope"></i> 내쪽지함 [<span
+									th:text="${count.messageCount}"></span>] </a></li>
+							<li class="nav-item"><a class="nav-link"
+								th:href="@{/member/myReservedList}"> <i
+									class="fas fa-file-invoice-dollar"></i> 나의 예약 및 결제 내역 [<span
+									th:text="${count.reservationCount}"></span>]
+							</a></li>
+							<li class="nav-item" sec:authorize="hasRole('ROLE_2')"><a
+								class="nav-link" th:href="@{/member/modifyInstructorInfo}">
+									<i class="fas fa-chalkboard-teacher"></i> 강사정보수정하기
+							</a></li>
+							<li class="nav-item"
+								sec:authorize="hasAnyRole('ROLE_1','ROLE_4','ROLE_5') "><a
+								class="nav-link" th:href="@{/member/toInstructor}"><i
+									class="fas fa-user-tie"></i> 강사전환신청하기</a></li>
+							<li class="nav-item social" style="display: none;"><a
+								class="nav-link" th:href="@{/member/changePw}"><i
+									class="fas fa-key"></i> 비밀번호바꾸기 </a></li>
+
+						</ul>
+					</div>
+				</nav>
+
+				<main class="col">
+				<div class="row ">
+					<div class="col py-1  topMenubar">
+						<ul class="nav">
+							<li class="nav-item px-3"><a class="nav-link"
+								th:href="@{/member/myReservedList}"><i
+									class="fas fa-file-invoice-dollar"></i> 나의 예약 및 결제 내역</a></li>
+							<li class="nav-item px-3"><a class="nav-link"
+								th:href="@{/member/myAppliedList}"><i
+									class="far fa-calendar"></i> 나의 신청 내역</a></li>
+							<li class="nav-item px-3"><a class="nav-link"
+								th:href="@{/member/myWantedList}"><i
+									class="far fa-calendar-check"></i> 나의 모집 내역</a></li>
+							<li class="nav-item px-3"><a class="nav-link"
+								th:href="@{/member/myBoardList}"><i
+									class="fas fa-clipboard-list"></i> 내가 쓴 글</a></li>
+							<li class="nav-item px-3"><a class="nav-link"
+								th:href="@{/member/modifyMyInfo}"><i
+									class="far fa-address-card"></i> 내 정보 수정</a></li>
+
+						</ul>
+					</div>
 				</div>
-			</nav>
-			
-			<main class="col">
-			<div class="row ">
-				<div class="col py-1  topMenubar">
-					<ul class="nav">
-						<li class="nav-item px-3"><a class="nav-link"
-							th:href="@{/member/myReservedList}"><i
-								class="fas fa-file-invoice-dollar"></i> 나의 예약 및 결제 내역</a></li>
-						<li class="nav-item px-3"><a class="nav-link" th:href="@{/member/myAppliedList}"><i
-								class="far fa-calendar"></i> 나의 신청 내역</a></li>
-						<li class="nav-item px-3"><a class="nav-link" th:href="@{/member/myWantedList}"><i
-								class="far fa-calendar-check"></i> 나의 모집 내역</a></li>
-						<li class="nav-item px-3"><a class="nav-link" th:href="@{/member/myBoardList}"><i
-								class="fas fa-clipboard-list"></i> 내가 쓴 글</a></li>
-						<li class="nav-item px-3"><a class="nav-link"
-							th:href="@{/member/modifyMyInfo}"><i class="far fa-address-card"></i> 내
-								정보 수정</a></li>
 
-					</ul>
-				</div>
+				<div layout:fragment="myPageContent" id="myPageContent"
+					style="margin-bottom: 100px;"></div>
+				</main>
 			</div>
+		</div>
 
-			<div layout:fragment="myPageContent" id="myPageContent" style="margin-bottom: 100px;">
-			</div>
-			</main>
+
+
+
+
+
+
+		<!-- 페이지의 푸터부분 -->
+
+		<footer th:replace="fragments/footer2 :: footerFragment2"></footer>
+
+		<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
+<script th:src="@{/webjars/popper.js/1.14.6/umd/popper.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/4.2.1/js/bootstrap.js}"></script>
+<script th:src="@{/webjars/bootstrap-select/1.13.3/js/bootstrap-select.js}"></script>
+<script th:src="@{/webjars/waypoints/4.0.1/lib/jquery.waypoints.js}"></script>
+<script th:src="@{/webjars/jquery-serialize-object/2.1.0/jquery.serialize-object.js}"></script>
+
+<script th:src="@{/webjars/sockjs-client/1.0.2/sockjs.min.js}"></script>
+<script th:src="@{/webjars/stomp-websocket/2.3.3/stomp.min.js}"></script>
+<script th:src="@{/static/plugins/greensock/TweenMax.min.js}"></script>
+<script th:src="@{/static/plugins/greensock/TimelineMax.min.js}"></script>
+<script th:src="@{/static/plugins/scrollmagic/ScrollMagic.min.js}"></script>
+<script th:src="@{/static/plugins/greensock/animation.gsap.min.js}"></script>
+<script th:src="@{/static/plugins/greensock/ScrollToPlugin.min.js}"></script>
+<script th:src="@{/static/plugins/OwlCarousel2-2.2.1/owl.carousel.js}"></script>
+<script th:src="@{/static/plugins/easing/easing.js}"></script>
+<script th:src="@{/static/plugins/progressbar/progressbar.min.js}"></script>
+<script th:src="@{/static/plugins/colorbox/jquery.colorbox-min.js}"></script>
+<script th:src="@{/static/plugins/parallax-js-master/parallax.min.js}"></script>
+		<!-- 소켓 라이브러리 -->
+		<script type="text/javascript"
+			src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
+		<script type="text/javascript"
+			src="//cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+		<script th:src="@{/static/js/notice/notice.js}"></script>
+		<script th:src="@{/static/js/notice/sockjs.js}"></script>
+		<script th:src="@{/static/js/main/main.js}"></script>
+		<script th:src="@{/static/js/member/myPage.js}"></script>
+
+
+		<th:block layout:fragment="script"></th:block>
+		<th:block layout:fragment="css"></th:block>
 	</div>
-	</div>
-
-
-
-
-
-
-
-	<!-- 페이지의 푸터부분 -->
-
-	<footer th:replace="fragments/footer2 :: footerFragment2"></footer>
-
-	<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
-	<script th:src="@{/webjars/popper.js/1.14.6/umd/popper.min.js}"></script>
-	<script th:src="@{/webjars/bootstrap/4.2.1/js/bootstrap.js}"></script>
-	<script
-		th:src="@{/webjars/bootstrap-select/1.13.3/js/bootstrap-select.js}"></script>
-	<script th:src="@{/webjars/waypoints/4.0.1/lib/jquery.waypoints.js}"></script>
-	<script
-		th:src="@{/webjars/jquery-serialize-object/2.1.0/jquery.serialize-object.js}"></script>
-	<script th:src="@{/static/plugins/greensock/TweenMax.min.js}"></script>
-	<script th:src="@{/static/plugins/greensock/TimelineMax.min.js}"></script>
-	<script th:src="@{/static/plugins/scrollmagic/ScrollMagic.min.js}"></script>
-	<script th:src="@{/static/plugins/greensock/animation.gsap.min.js}"></script>
-	<script th:src="@{/static/plugins/greensock/ScrollToPlugin.min.js}"></script>
-	<script th:src="@{/static/plugins/OwlCarousel2-2.2.1/owl.carousel.js}"></script>
-	<script th:src="@{/static/plugins/easing/easing.js}"></script>
-	<script th:src="@{/static/plugins/progressbar/progressbar.min.js}"></script>
-	<script th:src="@{/static/plugins/colorbox/jquery.colorbox-min.js}"></script>
-	<script th:src="@{/static/plugins/parallax-js-master/parallax.min.js}"></script>
-	<script th:src="@{/static/js/main/main.js}"></script>
-	<script th:src="@{/static/js/member/myPage.js}"></script>
-
-
-	<th:block layout:fragment="script"></th:block>
-	<th:block layout:fragment="css"></th:block>
-</div>
 </body>
 </html>
