--- a/codesquare/src/main/resources/templates/layout/mainLayout2.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout2.html
@@ -29,7 +29,7 @@
 
 
 <!-- 페이지의 content -->
-<div layout:fragment="content" style="padding: 0 150px 50px;"></div>
+<div layout:fragment="content"></div>
 
 <!-- 페이지의 푸터부분 -->
 
